Updated to remove createAsset (Not needed in App)
